<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mörder</string>

    <!-- strings for the navigation drawer -->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_quit">Quit</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- strings for BrowserActivity -->
    <string name="action_search">Search</string>
    <string name="action_home">Go home</string>
    <string name="action_back">Go back</string>
    <string name="action_refresh">Refresh page</string>
    <string name="action_stop">Stop page</string>
    <string name="action_forward">Go forward</string>
    <string name="action_share">Share</string>
    <string name="action_print">Print</string>
    <string name="action_copy_link_address">Copy link address</string>
    <string name="action_save_link_as">Download link</string>

    <!-- strings for SettingsActivity & friends. -->
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="pref_newTabPage_key">pref_newTabPage_key</string>
    <string name="pref_newTabPage_title">Home Page</string>
    <string name="pref_newTabPage_default">https://www.google.com/</string>
    <string name="pref_search_key">pref_search_key</string>
    <string name="pref_search_title">Search</string>
    <string name="pref_searchMode_key">pref_searchMode_key</string>
    <string name="pref_searchMode_title">Search Mode</string>
    <string name="pref_searchMode_summery">Perform web searches using the search website or ask OS for a web search activity.</string>
    <string name="pref_searchMode_mode_goToSite">Goto Website</string>
    <string name="pref_searchMode_mode_goToActivity">Launch activity</string>
    <string name="pref_searchShowUi_key">pref_searchShowUi_key</string>
    <string name="pref_searchShowUi_title">Search Bar</string>
    <string name="pref_searchShowUi_summeryoff">Search action will goto your search provider.</string>
    <string name="pref_searchShowUi_summeryon">Search action will expand to a search bar.</string>
    <string name="pref_search_website_key">pref_search_website_key</string>
    <string name="pref_search_website_title">Search Website</string>
    <string name="pref_search_website_default">https://www.google.com/?q=%s</string>
    <string name="pref_search_website_summery">Website to use with the search action. Use %s to include the submitted search text.</string>
    <string name="pref_userAgent_key">pref_userAgent_title</string>
    <string name="pref_userAgent_title">User Agent</string>
    <string name="pref_userAgentMode_key">pref_userAgentMode_key</string>
    <string name="pref_userAgentMode_title">User Agent Mode</string>
    <string name="pref_userAgentMode_summery">Device type to report in user agent string.</string>
    <string name="pref_userAgentMode_default">Smart</string>
    <string name="pref_showZoomControls_key">pref_showZoomControls_key</string>
    <string name="pref_showZoomControls_title">Show zoom controls</string>
    <string name="pref_showZoomControls_summeryoff">Zoom controls will not be shown.</string>
    <string name="pref_showZoomControls_summeryon">Zoom controls will be shown.</string>
    <string name="pref_advanced_key">pref_advanced_key</string>
    <string name="pref_advanced_title">Advanced</string>
    <string name="pref_javascript_key">pref_javascript_key</string>
    <string name="pref_javascript_title">Enable JavaScript</string>
    <string name="pref_javascript_summeryoff">Websites cannot use JavaScript. You\'ve broken the Internet!</string>
    <string name="pref_javascript_summeryon">Websites can use JavaScript. Dynamic web time, script time!</string>
    <string name="pref_pageTimeout_key">pref_pageTimeout_key</string>
    <string name="pref_pageTimeout_title">Page Timeout</string>
    <string name="pref_pageTimeout_summery">Web pages taking longer than this to finish loading will be stopped.</string>
    <string name="pref_pageTimeout_default">Never</string>

    <!-- strings for AboutActivity -->
    <string name="title_activity_about">AboutActivity</string>

    <!-- strings for various dialogs -->
    <string name="dialog_securityalert_title">Security Alert</string>
    <string name="dialog_securityalert_negativebutton">Go back</string>
    <string name="dialog_securityalert_positivebutton">Continue</string>

</resources>
