<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2014 Terry Mathew Poulin <BigBoss1964@gmail.com>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/pref_newTabPage_default"
        android:dialogTitle="@string/pref_newTabPage_title"
        android:key="@string/pref_newTabPage_key"
        android:title="@string/pref_newTabPage_title"/>

    <EditTextPreference
        android:defaultValue="@string/pref_search_default"
        android:key="@string/pref_search_key"
        android:title="@string/pref_search_title"
        android:summary="@string/pref_search_summery" />

    <PreferenceCategory
        android:key="@string/pref_userAgent_key"
        android:title="@string/pref_userAgent_title">

        <ListPreference
            android:defaultValue="@string/pref_userAgentMode_default"
            android:dialogTitle="@string/pref_userAgentMode_title"
            android:entries="@array/pref_userAgentMode_array"
            android:entryValues="@array/pref_userAgentMode_array"
            android:key="@string/pref_userAgentMode_key"
            android:summary="@string/pref_userAgentMode_summery"
            android:title="@string/pref_userAgentMode_title"/>

    </PreferenceCategory>

    <CheckBoxPreference
        android:key="@string/pref_showZoomControls_key"
        android:title="@string/pref_showZoomControls_title"
        android:defaultValue="@bool/pref_showZoomControls_default"
        android:summaryOff="@string/pref_showZoomControls_summeryoff"
        android:summaryOn="@string/pref_showZoomControls_summeryon" />

    <!-- Advanced settings -->
    <PreferenceCategory
        android:key="@string/pref_advanced_key"
        android:title="@string/pref_advanced_title">

        <CheckBoxPreference
            android:key="@string/pref_javascript_key"
            android:title="@string/pref_javascript_title"
            android:defaultValue="@bool/pref_javascript_default"
            android:summaryOff="@string/pref_javascript_summeryoff"
            android:summaryOn="@string/pref_javascript_summeryon" />

        <ListPreference
            android:defaultValue="@string/pref_pageTimeout_default"
            android:dialogTitle="@string/pref_pageTimeout_title"
            android:entries="@array/pref_pageTimeout_array"
            android:entryValues="@array/pref_pageTimeout_array"
            android:key="@string/pref_pageTimeout_key"
            android:summary="@string/pref_pageTimeout_summery"
            android:title="@string/pref_pageTimeout_title" />

    </PreferenceCategory>

</PreferenceScreen>
