<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2014 Terry Mathew Poulin <BigBoss1964@gmail.com>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom|collapseActionView"/>
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_action_home"
        android:showAsAction="ifRoom"
        android:title="@string/action_home"/>
    <!-- action_back, action_refresh, action_forward will be dynamically
         modified for in onPageStarted() / onPageFinished(). -->
    <item
        android:id="@+id/action_back"
        android:icon="@drawable/ic_action_back"
        android:showAsAction="always"
        android:visible="false"
        android:title="@string/action_back"/>
    <!-- title and icon will be dynamically set in BrowserActivity. -->
    <item
        android:id="@+id/action_refresh"
        android:showAsAction="always"/>
    <item
        android:id="@+id/action_forward"
        android:icon="@drawable/ic_action_forward"
        android:showAsAction="always"
        android:visible="false"
        android:title="@string/action_forward"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:showAsAction="ifRoom"
        android:title="@string/action_share"
        android:actionProviderClass="android.widget.ShareActionProvider"/>
    <item
        android:id="@+id/action_print"
        android:icon="@drawable/ic_action_print"
        android:showAsAction="never"
        android:title="@string/action_print"/>
</menu>
