<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2017 Terry Mathew Poulin <BigBoss1964@gmail.com>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_copy_link_address"
        android:showAsAction="always"
        android:title="@string/action_copy_link_address"/>
    <item
        android:id="@+id/action_save_link_as"
        android:showAsAction="always"
        android:title="@string/action_save_link_as"/>

    <!-- this just forwards to our usual share provider in BrowserActivity. -->
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:showAsAction="always"
        android:title="@string/action_share"
        android:actionProviderClass="android.widget.ShareActionProvider"/>
</menu>

